syntax = "proto3";

option csharp_namespace = "Palantir";

message JoinRoom {
	string device_id = 1;
	string channel_id = 2;
	string room = 3;
}

message RoomJoined {
}

message GetStateRequest{
	string source = 1;
}

message GetStateResponse{
	repeated string devices = 1;
}